sana_derive/tests/ui/fail-06-derive-not-on-enum.stderr
error: Sana can be only be derived for enums: expected `enum`
 --> $DIR/fail-06-derive-not-on-enum.rs:4:1
  |
4 | struct Token { }
  | ^^^^^^
