sana_derive/tests/ui/fail-06-derive-not-on-enum.rs
use sana_derive::Sana;

#[derive(Clone, Copy, Sana)]
struct Token { }

fn main() { }
